--- a/MyProject/GuessTheNumber.htm
+++ b/MyProject/GuessTheNumber.htm
@@ -50,6 +50,6 @@
 				<span id="LowerThenContainer"></span>
 			</div>
 		</div>
-		<script src="javascript"></script>
+		<script src="javaScript.js"></script>
 </body>
 </html>
